--- a/Reflex/src/assets/image/Vite + React.html
+++ b/Reflex/src/assets/image/Vite + React.html
@@ -791,7 +791,6 @@ window.__vite_plugin_react_preamble_installed__ = true
     padding: 5px 0px;
     border-radius: 0.1rem;
     white-space: nowrap;
-    font-family: Arial, sans-serif;
     transition: all 0.3s ease;
     min-width: -moz-fit-content;
     min-width: fit-content;
@@ -1513,7 +1512,6 @@ window.__vite_plugin_react_preamble_installed__ = true
 
 .contact-btn .button {
   white-space: nowrap;
-  font-family: Arial, sans-serif;
   font-size: 1.1rem;
   color: #ffffff;
   background-color: #007bff;
@@ -2108,13 +2106,13 @@ ul li a:hover {
   }
 }
 
-.item1 .item-txt,
+/* .item1 .item-txt,
 .item2 .item-txt,
 .item3 .item-txt,
 .item4 .item-txt,
 .item5 .item-txt {
   font-family: "Roboto", sans-serif;
-}
+} */
 
 .reflex-text {
   text-align: center;
@@ -4043,7 +4041,6 @@ button[type="submit"]:active {
   align-items: center;
   min-height: 100vh;
   background-color: #121212;
-  font-family: Arial, sans-serif;
   color: #e0e0e0;
 }
 
